# SAXSWAXS_workflows

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prefectignore  Dockerfile  README.md  config.yml  create_deployments.sh  docker-compose.yaml  prefect.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
saxswaxs-workflows/flows/: conversions.py  file_handling.py  reduction.py
saxswaxs_workflows/flows/: GISAXS_ALS_multi_task.ipynb  GISAXS_ALS_single_task.ipynb  autonomous.py  autonomous_zmq.py  conversions.py  curve_fitting.py  file_handling.py  file_watcher.py  kafka_flow_scheduler.py  latentspace.py  peak_fitting_new_scans.ipynb  pipeline.py  reduction.ipynb  reduction.py  utils_prefect.py
saxswaxs_workflows/reduction/: conversions.py  reduce.py
saxswaxs_workflows/tests/: conftest.py
